--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Vite App</title>
 		<script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
+		<script src="https://unpkg.com/leaflet-draw@0.4.13/dist/leaflet.draw.js"></script>
 		<link
 			type="text/css"
 			rel="stylesheet"
 			href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"
+		/>
+		<link
+			type="text/css"
+			rel="stylesheet"
+			href="https://unpkg.com/leaflet-draw@0.4.13/dist/leaflet.draw.css"
 		/>
 	</head>
 	<body>
