:sparkles: add start and end markers

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	</head>
 	<body>
 		<div id="map"></div>
+		<h1 id="coordinates"></h1>
 		<script type="module" src="/main.js"></script>
 	</body>
 </html>
