:sparkles: add floating container

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 	</head>
 	<body>
 		<div id="map"></div>
-		<h1 id="coordinates"></h1>
+		<div class="formBlock">
+			<h4 id="start-coordinate"></h4>
+			<h4 id="end-coordinate"></h4>
+			<button>Get Details</button>
+		</div>
 		<script type="module" src="/main.js"></script>
 	</body>
 </html>
