:sparkles: add session storage

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="formBlock">
 			<h4 id="start-coordinate"></h4>
 			<h4 id="end-coordinate"></h4>
-			<button>Get Details</button>
+			<button id="button">Get Details</button>
 		</div>
 		<script type="module" src="/main.js"></script>
 	</body>
