:sparkles: add route distance calculation

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 	</head>
 	<body>
 		<div id="map"></div>
-		<div class="formBlock">
-			<h4 id="start-coordinate"></h4>
-			<h4 id="end-coordinate"></h4>
+		<div id="block" class="formBlock">
 			<button id="button">Get Details</button>
 		</div>
 		<script type="module" src="/main.js"></script>
