:lipstick: add styled jeep selector

--- a/index.html
+++ b/index.html
@@ -20,8 +20,23 @@
 	</head>
 	<body>
 		<div id="map"></div>
-		<div id="block" class="formBlock">
-			<button id="button">Get Details</button>
+		<div id="block" class="form-block">
+			<button id="button">GO!!!</button>
+		</div>
+		<div class="jeep-form">
+			<h3 class="select-title">View Jeepney Routes</h3>
+			<h4 class="select-subtitle">Select a Jeepney</h4>
+			<div class="jeep-select">
+				<div class="hoverable first-route">
+					<img class="jeep-img" src="/jeep.png" alt="jeep" />
+				</div>
+				<div class="hoverable second-route">
+					<img class="jeep-img" src="/jeep.png" alt="jeep" />
+				</div>
+				<div class="hoverable third-route">
+					<img class="jeep-img" src="/jeep.png" alt="jeep" />
+				</div>
+			</div>
 		</div>
 		<script type="module" src="/main.js"></script>
 	</body>
