:lipstick: style form control card

--- a/index.html
+++ b/index.html
@@ -21,8 +21,27 @@
 	<body>
 		<div id="map"></div>
 		<div id="block" class="form-block">
-			<button id="button">GO!!!</button>
-			<div id="details">
+			<div class="form-title">
+				<h1>Travel</h1>
+			</div>
+			<div class="form-inputs">
+				<div class="form-control">
+					<div class="input-control">
+						<label>Origin</label>
+						<input class="marker-input" type="text" />
+					</div>
+				</div>
+				<div class="form-control">
+					<div class="input-control">
+						<label>Destination</label>
+						<input class="marker-input" type="text" />
+					</div>
+				</div>
+				<div class="form-control">
+					<button class="go-button" id="button">GO!!!</button>
+				</div>
+			</div>
+			<div class="details" id="details">
 				<div class="detail">
 					<b class="distance">Distance: </b>
 				</div>
