:sparkles: add lapaz to festive walk route

--- a/index.html
+++ b/index.html
@@ -32,23 +32,6 @@
 			<div class="form-title">
 				<h1>Travel</h1>
 			</div>
-			<div class="form-inputs">
-				<div class="form-control">
-					<div class="input-control">
-						<label>Origin</label>
-						<input class="marker-input" type="text" />
-					</div>
-				</div>
-				<div class="form-control">
-					<div class="input-control">
-						<label>Destination</label>
-						<input class="marker-input" type="text" />
-					</div>
-				</div>
-				<div class="form-control">
-					<button class="go-button" id="go-button">GO!!!</button>
-				</div>
-			</div>
 			<div class="details" id="details">
 				<div class="detail">
 					<b class="distance">Distance: </b>
@@ -59,6 +42,9 @@
 				<div class="detail" id="jeep-type">
 					<b class="jeep-type">Jeepney: </b>
 				</div>
+			</div>
+			<div id="go-button-container" class="form-control">
+				<button class="go-button" id="go-button">GO!!!</button>
 			</div>
 		</div>
 		<div id="jeep-form" class="jeep-form">
@@ -72,6 +58,9 @@
 					<img class="jeep-img" src="/jeep.png" alt="jeep" />
 				</div>
 				<div class="hoverable third-route" id="third-route">
+					<img class="jeep-img" src="/jeep.png" alt="jeep" />
+				</div>
+				<div class="hoverable fourth-route" id="fourth-route">
 					<img class="jeep-img" src="/jeep.png" alt="jeep" />
 				</div>
 			</div>
