:sparkles: add switch button to change fare option

--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
 					<img class="jeep-img" src="/jeep.png" alt="jeep" />
 				</div>
 			</div>
+			<div class="toggle-class">
+				<h5>Regular</h5>
+				<input type="checkbox" id="switch" /><label for="switch">Toggle</label>
+				<h5 class="special-text">Special</h5>
+			</div>
 		</div>
 		<script type="module" src="/main.js"></script>
 	</body>
