:sparkles: add toggling of jeep routes

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
 			<div id="go-button-container" class="form-control">
 				<button class="go-button" id="go-button">GO!!!</button>
 			</div>
+			<div class="toggle-buttons">
+				<button type="button" id="route1-toggle" class="left">
+					Reverse Route
+				</button>
+				<button type="button" id="route2-toggle" class="right">
+					Forward Route
+				</button>
+			</div>
 		</div>
 		<div id="jeep-form" class="jeep-form">
 			<h3 class="select-title">View Jeepney Routes</h3>
