:bug: fix marker issue bug

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 			</div>
 			<div id="go-button-container" class="form-control">
 				<button class="go-button" id="go-button">GO!!!</button>
+				<button class="help-button" id="help-button">HELP</button>
 			</div>
 		</div>
 		<div id="jeep-form" class="jeep-form">
