--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 			</div>
 			<div id="go-button-container" class="form-control">
 				<button class="go-button" id="go-button">GO!!!</button>
-				<button class="help-button" id="help-button">HELP</button>
+				<button class="help-button" id="help-button">
+					<a class="help-text" href="help.html" target="_self">Help</a>
+				</button>
 			</div>
 		</div>
 		<div id="jeep-form" class="jeep-form">
